[package]
name = "axum-app"
description = "An example for axum integration."
version = "0.11.0"
rust-version = "1.73"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.20"
faster-hex = "0.8.1"
md-5 = "0.10.6"
rand = "0.8.5"
tokio = {version = "1.34.0",features = ["full"]}
tracing = "0.1.40"

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.zino]
path = "../../zino"
version = "0.16.2"
features = ["axum"]

[dependencies.zino-core]
version = "0.17.2"
features = [
    "crypto-sm",
    "locale-en",
    "validator-email",
    "validator-phone-number",
    "view-tera",
    "connector",
    "connector-arrow",
    "orm-postgres",
    "view-minijinja",
]

[dependencies.zino-derive]
version = "0.14.2"

[dependencies.zino-model]
version = "0.14.2"
