[package]
name = "kip_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
kip-sql = "0.0.1-alpha.6"
serde = { version = "1.0.192", features = ["derive"] }
tracing = "0.1.40"
tokio = { version = "1.28.2", features = ["full"] }
zino = { version = "0.15.3", default-features = false, features = ["axum"] }
zino-core = { version = "0.16.3" }
serde_json = "1.0.108"
chrono = "0.4.31"