[package]
name = "rbatis-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
rbatis = "4.5.2"
rbdc-mysql = "4.5.0"
rbs = "4.5.0"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
zino = { version = "0.15.1", features = ["axum"] }
zino-core = { version = "0.16.1", features = ["orm-mysql"] }
zino-derive = "0.13.1"
zino-model = "0.13.1"
